<resources>
    <string name="app_name">P0-Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="button_media">SPOTIFY STREAMER</string>
    <string name="button_duo1">SCORES APP</string>
    <string name="button_duo2">LIBRARY APP</string>
    <string name="button_bigger">BUILD IT BIGGER</string>
    <string name="button_bacon">XYZ READER</string>
    <string name="button_capstone">CAPSTONE: MY OWN APP</string>
</resources>
