<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffd1e2e8">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/title"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ff202a39" />

    <Button
        style="@style/PersButton.Orange"
        android:text="@string/button_media"
        android:id="@+id/button_popmov"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/title"
        android:layout_alignLeft="@+id/button_duo1"
        android:layout_alignStart="@+id/button_duo1"
        android:onClick="onBtnPopMovClicked" />

    <Button
        style="@style/PersButton.Orange"
        android:id="@+id/button_duo1"
        android:text="@string/button_duo1"
        android:layout_below="@+id/button_popmov"
        android:onClick="onBtnDuo1Clicked" />

    <Button
        style="@style/PersButton.Orange"
        android:text="@string/button_duo2"
        android:id="@+id/button_duo2"
        android:layout_below="@+id/button_duo1"
        android:onClick="onBtnDuo2Clicked" />

    <Button
        style="@style/PersButton.Orange"
        android:text="@string/button_bigger"
        android:id="@+id/button_bigger"
        android:layout_below="@+id/button_duo2"
        android:onClick="onBtnBiggerClicked" />

    <Button
        style="@style/PersButton.Orange"
        android:text="@string/button_bacon"
        android:id="@+id/button_bacon"
        android:layout_below="@+id/button_bigger"
        android:layout_alignLeft="@+id/button_bigger"
        android:layout_alignStart="@+id/button_bigger"
        android:onClick="onBtnBaconClicked" />

    <Button
        style="@style/PersButton.Red"
        android:text="@string/button_capstone"
        android:id="@+id/button_capstone"
        android:layout_below="@+id/button_bacon"
        android:layout_alignLeft="@+id/button_bacon"
        android:layout_alignStart="@+id/button_bacon"
        android:onClick="onBtnCapstoneClicked" />
</RelativeLayout>
